--- a/index.html
+++ b/index.html
@@ -4,17 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Discord</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <header>
-
+    <header class="main-header">
+        <nav class="container">
+            <div class="row">
+                <div class="col-3">
+                    logo
+                </div>
+                <div class="col-6">
+                    link link link link
+                </div>
+                <div class="col-3">
+                    login
+                </div>
+            </div>
+        </nav>
     </header>
     <main>
 
     </main>
     <footer>
-        
+
     </footer>
     
 </body>
