--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <div class="col-6">
                     link link link link
                 </div>
-                <div class="col-3">
+                <div class="col-3 login">
                     login
                 </div>
             </div>
