Add blue-section and stylized

--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 </head>
 <body>
     <header class="main-header">
-        <nav class="container">
+        <nav class="header-container">
             <div class="row">
                 <div class="col-3">
                     logo
                 </div>
-                <div class="col-6">
+                <div class="col-6 link">
                     link link link link
                 </div>
                 <div class="col-3 login">
@@ -23,6 +23,15 @@
         </nav>
     </header>
     <main>
+        <section class="blue-section">
+            <div class="blue-section-row">
+                <div class="blue-section-col">
+                    
+                </div>
+
+            </div>
+
+        </section>
 
     </main>
     <footer>
