Added similar sections

--- a/index.html
+++ b/index.html
@@ -24,9 +24,48 @@
     </header>
     <main>
         <section class="blue-section">
-            <div class="blue-section-row">
+            <div class="unique blue-section-row">
                 <div class="blue-section-col">
-                    
+
+                </div>
+
+            </div>
+
+        </section>
+
+        <section class="white-section">
+            <div class="unique white-section-row">
+                <div class="white-section-col col-8">
+
+                </div>
+                <div class="white-section-col col-4">
+
+                </div>
+
+            </div>s
+
+        </section>
+
+        <section class="grey-section">
+            <div class="unique grey-section-row">
+                <div class="grey-section-col col-4">
+
+                </div>
+                <div class="grey-section-col col-8">
+
+                </div>
+
+            </div>
+
+        </section>
+
+        <section class="white-section">
+            <div class="unique white-section-row">
+                <div class="white-section-col col-8">
+
+                </div>
+                <div class="white-section-col col-4">
+
                 </div>
 
             </div>
