Add big section and stylized

--- a/index.html
+++ b/index.html
@@ -72,6 +72,14 @@
 
         </section>
 
+        <section class="big-grey-section">
+            <div class="unique big-grey-row">
+                <div class="big-grey-section-col">
+
+                </div>
+            </div>
+        </section>
+
     </main>
     <footer>
 
