Add last section of main and stylized

--- a/index.html
+++ b/index.html
@@ -74,11 +74,25 @@
 
         <section class="big-grey-section">
             <div class="unique big-grey-row">
-                <div class="big-grey-section-col">
+                <div class="big-grey-section-col col">
 
                 </div>
             </div>
         </section>
+
+        <section class="dark-section">
+            <div class="unique dark-row">
+                <div class="dark-col-4 col-4"></div>
+                <div class="dark-col-2 col-2"></div>
+                <div class="dark-col-2 col-2"></div>
+                <div class="dark-col-2 col-2"></div>
+                <div class="dark-col-2 col-2"></div>
+               
+            </div>
+
+        </section>
+        
+
 
     </main>
     <footer>
