Add footer and stylized

--- a/index.html
+++ b/index.html
@@ -96,6 +96,17 @@
 
     </main>
     <footer>
+        <nav class="footer-container">
+            <div class="footer-row">
+                <div class="col-logo rose">
+                    Logo
+                </div>
+                <div class="col-button rose">
+                    Bottone
+                </div>
+                
+            </div>
+        </nav>
 
     </footer>
     
